<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dip"
            android:padding="@dimen/ten_dip">


            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty_dip"
                tools:ignore="SpUsage" />


            <TextView
                android:id="@+id/tvAbout_us_data1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHeading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/five_dip"
                android:text="@string/about_us_data1"
                android:textColor="@color/black" />


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAbout_us_data1"
                android:layout_marginTop="@dimen/ten_dip"
                android:background="@drawable/edit_text_green_back"
                android:padding="@dimen/five_dip">


                <TextView
                    android:id="@+id/tvAbout_us_data2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_us_data2"
                    android:textColor="@color/dark_green_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAbout_us_data2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_us_data3"
                    android:textColor="@color/dark_green_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tvBuyer_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/twenty_dip"
                android:text="@string/about_us_data4"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyer_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBuyer_heading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/ten_dip"
                android:text="@string/about_us_data5"
                android:textColor="@color/black" />


            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBuyer_data"
                android:layout_marginTop="@dimen/twenty_dip"
                android:background="@drawable/edit_text_green_back"
                android:padding="@dimen/ten_dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_us_data6"
                    android:textColor="@color/dark_green_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvAbout_us_data7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/twenty_dip"
                android:text="@string/about_us_data7"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvAbout_us_data8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAbout_us_data7"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginTop="@dimen/ten_dip"
                android:text="@string/about_us_data8"
                android:textColor="@color/black" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAbout_us_data8">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/ten_dip"
                    android:text="@string/about_us_data9"
                    android:textColor="@color/dark_green_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>