<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/green"

    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/fourty_dip"
        android:layout_height="@dimen/fourty_dip"
        android:layout_gravity="center_horizontal|center_vertical"
android:id="@+id/img_view_quantity"
        android:layout_marginTop="@dimen/ten_dip"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_quantity" />

    <TextView
        android:id="@+id/tvDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_dip"
        android:textStyle="bold"
        android:layout_below="@+id/img_view_quantity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/enter_quantity"
        android:inputType="number"
        android:maxLength="4"
        android:layout_below="@+id/tvDialogHeader"
        android:backgroundTint="@color/white"
        android:paddingLeft="@dimen/ten_dip"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/ten_dip"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_below="@+id/editText"
        android:layout_marginTop="@dimen/twenty_dip"
        android:layout_marginBottom="@dimen/twenty_dip"
        android:layout_marginLeft="@dimen/twenty_dip"

        android:gravity="right"
        android:weightSum="3">



        <TextView
            android:id="@+id/cancelDialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/thirty_dip"
            android:layout_margin="@dimen/ten_dip"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/green"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/okDialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/thirty_dip"
android:layout_marginRight="@dimen/twenty_dip"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"

            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ok"
            android:textColor="@color/green"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>