<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/cardViewCancelDialog"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/grey_light3"
    app:cardCornerRadius="@dimen/ten_dip"

    tools:context="com.aapkatrade.buyer.dialogs.track_order.TrackOrderDialog">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_close_reason"
            android:layout_width="@dimen/fourty_dip"
            android:layout_height="@dimen/fourty_dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ten_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:background="@drawable/delete" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"

            android:layout_centerVertical="true"
            android:layout_below="@+id/dialog_close">


            <ImageView
                android:id="@+id/img_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_centerHorizontal="true"
                android:src="@drawable/cross_dialog" />


            <TextView
                android:id="@+id/tvTourMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_cross"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/five_dip"
                android:text="@string/cancelingRequest"
                android:textSize="@dimen/textsize_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dip"
                android:layout_below="@+id/tvTourMsg"

                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_cross"
                    android:layout_marginLeft="@dimen/fourty_dip"

                    android:layout_marginTop="@dimen/ten_dip"
                    android:text="@string/reason"
                    android:textSize="@dimen/textsize_medium" />






<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/fourty_dip"
    android:layout_marginRight="@dimen/fourty_dip"
    android:layout_marginTop="@dimen/ten_dip"
    android:background="@drawable/edit_text_green_back"
    android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:padding="@dimen/two_dip"
                    android:layout_height="wrap_content"

                    android:id="@+id/spinnerCancelReason"

                    android:layout_alignParentLeft="true"
                    android:background="@drawable/simple_spinner_back"
                    ></Spinner>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow" />

</RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/img_cross"
                    android:layout_marginLeft="@dimen/fourty_dip"

                    android:layout_marginTop="@dimen/twenty_dip"
                    android:text="@string/comments"
                    android:textSize="@dimen/textsize_medium" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/fourty_dip"
                    android:layout_marginRight="@dimen/fourty_dip"
                    android:layout_marginTop="@dimen/five_dip"
                    android:background="@drawable/edit_text_green_back"
                    android:hint="@string/type_comment"
                    android:minLines="3"
                    android:ellipsize="none"
                    android:layout_gravity="top"
                    android:id="@+id/comment"
                    android:gravity="top"
                    android:paddingLeft="@dimen/ten_dip" />



                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/fourty_dip"
                    android:background="@color/green"
                    android:layout_marginTop="@dimen/twenty_dip"
                    android:text="@string/submit"
                    android:id="@+id/submit"
                    android:textColor="@color/white"
                    android:layout_marginRight="@dimen/fourty_dip"
                    android:layout_height="match_parent" />


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>