<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical|center_horizontal"
    android:layout_margin="@dimen/ten_dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/twenty_dip"
        android:layout_marginBottom="@dimen/twenty_dip"
        android:gravity="center_horizontal|center_vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/etBeneficiaryName"
                style="@style/myedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginRight="@dimen/five_dip"
                android:hint="@string/beneficiary_name"
                android:inputType="text"
                android:paddingLeft="@dimen/ten_dip"
                android:textColorHint="@color/green"
                android:theme="@style/myedittext" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/etBeneficiaryIFSC"
                style="@style/myedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginRight="@dimen/five_dip"
                android:hint="@string/beneficiary_ifsc"
                android:inputType="text"
                android:paddingLeft="@dimen/ten_dip"
                android:textColorHint="@color/green"
                android:theme="@style/myedittext" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/etBeneficiaryAccount"
                style="@style/myedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginRight="@dimen/five_dip"
                android:hint="@string/beneficiary_account"
                android:inputType="text"
                android:paddingLeft="@dimen/ten_dip"
                android:textColorHint="@color/green"
                android:theme="@style/myedittext" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/etBeneficiaryBankName"
                style="@style/myedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginRight="@dimen/five_dip"
                android:hint="@string/beneficiary_bank_name"
                android:inputType="text"
                android:paddingLeft="@dimen/ten_dip"
                android:textColorHint="@color/green"
                android:theme="@style/myedittext" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color">

            <EditText
                android:id="@+id/etBeneficiaryAddress"
                style="@style/myedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dip"
                android:layout_marginRight="@dimen/five_dip"
                android:hint="@string/beneficiary_address"
                android:inputType="text"
                android:paddingLeft="@dimen/ten_dip"
                android:textColorHint="@color/green"
                android:theme="@style/myedittext" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dip"
            android:layout_marginRight="@dimen/twenty_dip"
            android:layout_marginTop="@dimen/ten_dip"
            android:textColorHint="@color/hint_color"
            android:hint="@string/state" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spStateCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/simple_spinner_back" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_arrow" />


            </RelativeLayout>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
